force-app/main/default/objects/Dropbox_Credential__mdt/Dropbox_Credential__mdt.object-meta.xml
<CustomObject>
    <label>Dropbox Credential</label>
    <pluralLabel>Dropbox Credential</pluralLabel>
</CustomObject>