force-app/main/default/objects/Dropbox_Credential__mdt/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <label>email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>