force-app/main/default/objects/Dropbox_Credential__mdt/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <type>TextArea</type>
</CustomField>